prevent classic table from being too wide

--- a/app/assets/stylesheets/new.css.scss
+++ b/app/assets/stylesheets/new.css.scss
@@ -606,7 +606,7 @@ table#classic {
       &.name {
         font-size: 1.0rem;
         font-weight: 500;
-        
+        max-width: 30rem !important;
         a {
           color: inherit;
           i {
